--- a/index.html
+++ b/index.html
@@ -45,8 +45,57 @@
     <section class="rules">
       <div class="container">
         <article class="rule-one">
-          <h3>Отступ задается от предыдущего элемента к следующему: от первого ко второму, сверху вниз, слева направо.</h3>
-          
+          <h3 class="rule-one__title">Отступ задается от предыдущего элемента к следующему: от первого ко второму, сверху вниз, слева направо.</h3>
+          <div class="rule-one__block rule-one__block-img1">
+            <img src="image/image_1.jpg" alt="пример с использованием margin у 4 блоков">
+          </div>
+          <div class="rule-one__block rule-one__block-text1">
+            <p class="text">ВАЖНО: <i>margin</i> всегда задают от предыдущего элемента к следующему.
+            </p>
+            <p class="text">Свойство <i>margin</i> необходимо только для того, чтобы отодвинуть своего соседа справа или снизу, поэтому используется <i>margin-right</i> и <i>margin-bottom</i>.
+            </p>
+            <p class="text">(!) Свойства <i>margin-left</i> и <i>margin-top</i> используются крайне редко.
+            </p>
+            <p class="text">Для <i>padding</i> верно обратное. Исключением является его применения в декоративных целях, например, для увеличения области ссылки.
+            </p>
+          </div>
+          <div class="rule-one__block rule-one__block-text2">
+            <p class="text">Отступ внутри блока сверху или слева реализуется через <i>padding-top</i> и <i>padding-left</i> родителя.
+            </p>
+            <p class="text">Отступы, как правило, делают в направлении от предыдущего элемента к следующему. Так элемент не будет толкать сам себя.
+            </p>
+            <p class="text">Изначально элемент статичен, а его положение может меняться только под воздействием свойств других блоков или свойств родителя.
+            </p>
+          </div>
+          <div class="rule-one__block rule-one__block-img2">
+            <img src="image/image_2.jpg" alt="пример с использованием margin у 4 блоков">
+          </div>
+        </article>
+        <article class="rule-two">
+          <h3 class="rule-two__title">Отступ задается последнему возможному элементу в DOM-дереве</h3>
+          <p class="text">Вообще, margin задают исключительно между соседними элементами DOM-дерева. Для примера, посмотрите на этот список:
+          </p>
+          <div class="rule-two__block-img1">
+            <img class="rule-two__img-dom1" src="image/image_3.jpg" alt="Пример кода DOM-дерева">
+            <img class="rule-two__img-dom2" src="image/image_4.jpg" alt="Пример отображения DOM-дерева ">
+          </div>
+          <p class="text">Отступ делают за счёт соседних элементов, а не дочерних:
+          </p>
+          <figure class="rule-two__figure">
+            <img class="rule-two__img-dom3" src="image/image_5.jpg" alt="Пример отступа, используя margin">
+            <figcaption class="figcaption"><b>ВАЖНО</b>: здесь .<i>list-item</i> — последний возможный элемент в котором мы задаём отступ, чтобы разделить списки.
+            </figcaption>
+          </figure>
+          <p class="text">Казалось бы, можно задать отступ параграфу &lt;<i>p</i>&gt;	, либо обёртке &lt;<i>article</i>&gt;	 для достижения той же цели. Внешне останется все точно также, но так делать не рекомендуется.
+          </p>
+          <p class="text">Предыдущий пример был достаточно простым, но бывает вложенность значительно больше.
+          </p>
+          <img class="rule-two__img-dom4" src="image/image_6.jpg" alt="Пример кода c двойной вложенностью">
+          <p class="text">В случае с заголовком, если ему необходим отступ сверху, последним элементом будет <i>section</i>. Именно для него задается <i>padding-top</i>, а не <i>div</i> с классом <i>container</i>. Свойства <i>margin</i>, которые стоят по умолчанию необходимо обнулить.
+          </p>
+          <img class="rule-two__img-dom5" src="image/image_7.jpg" alt="Пример использования padding-top c двойной вложенностью">
+          <p class="text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.
+          </p>
         </article>
       </div>
     </section>
