--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="index.css">
   <title>Identation</title>
 </head>
-<body class="page">
-  <header>
-    <section class="header">
+<body>
+  <article class="page">
+    <div class="header">
       <div class="container">
         <h1 class="header__title">Отступы в вёрстке: margin и padding</h1>
         <p class="text">В этой статье я рассмотрю самые популярные "стандартные" решения для сохранения смысла и хорошей читаемости вашего кода. Если точнее — речь пойдет об основных правилах организации отступов. Они сильно влияют на общую функциональность кода и, если всё сделано верно, позволяют легко вносить изменения в любую его часть. При этом другие части кода продолжат нормально работать.
@@ -20,28 +20,25 @@
         <p class="text">Как это часто бывает, знание базовых принципов поможет проявить гибкость и выйти за их пределы. Эти знания особенно важны для начинающих, но также будут полезным напоминанием и для более опытных верстальщиков. Итак, поговорим о фундаментальных основах работы с отступами в вёрстке.
         </p>
       </div>
-    </section>
-    <section class="content">
-      <div class="container">
-        <h2 class="content__title">Содержание</h2>
-        <nav class="content__navigation">
-          <ol class="content__navigation__list">
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article1">Отступ задается от предыдущего элемента к следующему</a>
-            </li>
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article2">Отступ задается последнему возможному элементу в DOM-дереве</a>
-            </li>
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article3">Для последнего элемента группы отступ обнуляется</a>
-            </li>
-          </ol>
-        </nav>
-      </div>
-    </section>
-  </header>
+    </div>
 
-  <main>
+    <div class="container-nav">
+      <h2 class="content__title">Содержание</h2>
+      <nav class="content__navigation">
+        <ol class="content__navigation__list">
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#article1">Отступ задается от предыдущего элемента к следующему</a>
+          </li>
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#article2">Отступ задается последнему возможному элементу в DOM-дереве</a>
+          </li>
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#article3">Для последнего элемента группы отступ обнуляется</a>
+          </li>
+        </ol>
+      </nav>
+    </div>
+
     <section class="rules">
       <div class="container">
         <article class="rule-one">
@@ -97,8 +94,52 @@
           <p class="text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.
           </p>
         </article>
+        <article>
+          <h3>Для последнего элемента группы отступ всегда обнуляется</h3>
+          <p>Для наглядности возьмём наш предыдущий пример с рецептами
+          </p>
+          <p>Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.
+          </p>
+          <img src="image/image_8.jpg" alt="Пример обнуления отступа для последнего элемента">
+          <p>В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю padding для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.
+          </p>
+          <img src="image/image_9.jpg" alt="Пример обнуления отступа для последнего элемента в браузере">
+          <img src="image/image_10.jpg" alt="Пример кода html, где article вложен в тег section">
+          <img src="image/image_11.jpg" alt="Еще один пример кода html, где article вложен в тег section">
+          <p>Для большего понимания рассмотрим другой пример, который часто встречается на практике:
+          </p>
+          <img src="image/image_12.jpg" alt="Пример отображения навигации сайта Methed в браузере">
+          <img src="image/image_13.jpg" alt="Пример отображения навигации сайта Methed в CSS">
+          <p>Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:
+          </p>
+          <img src="image/image_14.jpg" alt="Пример использования margin для элементов списка">
+          <p>Советую использовать псевдоклассы :last-child чаще других, например так:
+          </p>
+          <img src="image/image_15.jpg" alt="Пример использования margin для элементов списка">
+        </article>
       </div>
     </section>
-  </main>
+
+    <section>
+      <div class="container-nav">
+        <h2 class="content__title">Подытожим:</h2>
+        <div class="content__resume">
+          <ul class="content__resume__list">
+            <li class="content__resume__item">отступы задаём от предыдущего элемента к следующему
+            </li>
+            <li class="content__resume__item">используем только margin-right и margin-bottom
+            </li>
+            <li class="content__resume__item">внешние отступы задаются только между соседями
+            </li>
+            <li class="content__resume__item">внутренний отступ задаём самому верхнему элементу в дом дереве
+            </li>
+            <li class="content__resume__item">последнему элементу группы отступ всегда обнуляем
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </article>
+
 </body>
 </html>
