--- a/index.html
+++ b/index.html
@@ -96,26 +96,36 @@
         </article>
         <article>
           <h3>Для последнего элемента группы отступ всегда обнуляется</h3>
-          <p>Для наглядности возьмём наш предыдущий пример с рецептами
+          <p class="text">Для наглядности возьмём наш предыдущий пример с рецептами
           </p>
-          <p>Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.
-          </p>
-          <img src="image/image_8.jpg" alt="Пример обнуления отступа для последнего элемента">
-          <p>В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю padding для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.
-          </p>
-          <img src="image/image_9.jpg" alt="Пример обнуления отступа для последнего элемента в браузере">
-          <img src="image/image_10.jpg" alt="Пример кода html, где article вложен в тег section">
-          <img src="image/image_11.jpg" alt="Еще один пример кода html, где article вложен в тег section">
-          <p>Для большего понимания рассмотрим другой пример, который часто встречается на практике:
-          </p>
-          <img src="image/image_12.jpg" alt="Пример отображения навигации сайта Methed в браузере">
-          <img src="image/image_13.jpg" alt="Пример отображения навигации сайта Methed в CSS">
-          <p>Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:
-          </p>
-          <img src="image/image_14.jpg" alt="Пример использования margin для элементов списка">
-          <p>Советую использовать псевдоклассы :last-child чаще других, например так:
-          </p>
-          <img src="image/image_15.jpg" alt="Пример использования margin для элементов списка">
+          <figure>
+            <figcaption class="text">Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.
+            </figcaption>
+            <img class="rule-three__img" src="image/image_8.jpg" alt="Пример обнуления отступа для последнего элемента">
+          </figure>
+          <figure>
+            <figcaption class="text">В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю padding для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.
+            </figcaption>
+            <img class="rule-three__img" src="image/image_9.jpg" alt="Пример обнуления отступа для последнего элемента в браузере">
+            <img src="image/image_10.jpg" alt="Пример кода html, где article вложен в тег section">
+            <img class="rule-three__img" src="image/image_11.jpg" alt="Еще один пример кода html, где article вложен в тег section">
+          </figure>
+          <figure>
+            <figcaption class="text">Для большего понимания рассмотрим другой пример, который часто встречается на практике:
+            </figcaption>
+            <img class="rule-three__img" src="image/image_12.jpg" alt="Пример отображения навигации сайта Methed в браузере">
+            <img class="rule-three__img" src="image/image_13.jpg" alt="Пример отображения навигации сайта Methed в CSS">
+          </figure>
+          <figure>
+            <figcaption class="text">Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:
+            </figcaption>
+            <img class="rule-three__img" src="image/image_14.jpg" alt="Пример использования margin для элементов списка">
+          </figure>
+          <figure>
+            <figcaption class="text">Советую использовать псевдоклассы :last-child чаще других, например так:
+            </figcaption>
+            <img class="rule-three__img" src="image/image_15.jpg" alt="Пример использования margin для элементов списка">
+          </figure>
         </article>
       </div>
     </section>
