--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
     </div>
 
     <div class="container-nav">
-      <h2 class="content__title">Содержание</h2>
-      <nav class="content__navigation">
-        <ol class="content__navigation__list">
-          <li class="content__navigation__item">
-            <a class="content__navigation__link" href="#article1">Отступ задается от предыдущего элемента к следующему</a>
-          </li>
-          <li class="content__navigation__item">
-            <a class="content__navigation__link" href="#article2">Отступ задается последнему возможному элементу в DOM-дереве</a>
-          </li>
-          <li class="content__navigation__item">
-            <a class="content__navigation__link" href="#article3">Для последнего элемента группы отступ обнуляется</a>
-          </li>
-        </ol>
-      </nav>
+      <section class="content">
+        <h2 class="content__title">Содержание</h2>
+        <nav class="content__navigation">
+          <ol class="content__navigation__list">
+            <li class="content__navigation__item">
+              <a class="content__navigation__link" href="#article1">Отступ задается от предыдущего элемента к следующему</a>
+            </li>
+            <li class="content__navigation__item">
+              <a class="content__navigation__link" href="#article2">Отступ задается последнему возможному элементу в DOM-дереве</a>
+            </li>
+            <li class="content__navigation__item">
+              <a class="content__navigation__link" href="#article3">Для последнего элемента группы отступ обнуляется</a>
+            </li>
+          </ol>
+        </nav>
+      </section>
     </div>
 
     <section class="rules">
@@ -128,9 +130,9 @@
       </div>
     </section>
 
-    <section>
+    <section class="resume">
       <div class="container-nav">
-        <h2 class="content__title">Подытожим:</h2>
+        <h2 class="resume__title">Подытожим:</h2>
         <div class="content__resume">
           <ul class="content__resume__list">
             <li class="content__resume__item">отступы задаём от предыдущего элемента к следующему
