--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
     <section class="resume">
       <div class="container-nav">
         <h2 class="resume__title">Подытожим:</h2>
-        <div class="content__resume">
-          <ul class="content__resume__list">
-            <li class="content__resume__item">отступы задаём от предыдущего элемента к следующему
+        <div class="resume__content">
+          <ul class="resume__list">
+            <li class="resume__item">отступы задаём от предыдущего элемента к следующему
             </li>
-            <li class="content__resume__item">используем только margin-right и margin-bottom
+            <li class="resume__item">используем только margin-right и margin-bottom
             </li>
-            <li class="content__resume__item">внешние отступы задаются только между соседями
+            <li class="resume__item">внешние отступы задаются только между соседями
             </li>
-            <li class="content__resume__item">внутренний отступ задаём самому верхнему элементу в дом дереве
+            <li class="resume__item">внутренний отступ задаём самому верхнему элементу в дом дереве
             </li>
-            <li class="content__resume__item">последнему элементу группы отступ всегда обнуляем
+            <li class="resume__item">последнему элементу группы отступ всегда обнуляем
             </li>
           </ul>
         </div>
