--- a/index.html
+++ b/index.html
@@ -22,33 +22,33 @@
       </div>
     </div>
 
-    <div class="container-nav">
-      <section class="content">
-        <h2 class="content__title">Содержание</h2>
+    <section class="content">
+      <div class="container--nav">
         <nav class="content__navigation">
-          <ol class="content__navigation__list">
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article1">Отступ задается от предыдущего элемента к следующему</a>
-            </li>
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article2">Отступ задается последнему возможному элементу в DOM-дереве</a>
-            </li>
-            <li class="content__navigation__item">
-              <a class="content__navigation__link" href="#article3">Для последнего элемента группы отступ обнуляется</a>
-            </li>
-          </ol>
-        </nav>
-      </section>
-    </div>
+        <h2 class="content__title">Содержание</h2>
+        <ol class="content__navigation__list">
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#cats-link">Отступ задается от предыдущего элемента к следующему</a>
+          </li>
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#dom-link">Отступ задается последнему возможному элементу в DOM-дереве</a>
+          </li>
+          <li class="content__navigation__item">
+            <a class="content__navigation__link" href="#receipt-link">Для последнего элемента группы отступ обнуляется</a>
+          </li>
+        </ol>
+      </nav>
+      </div>
+    </section>
 
-    <section class="rules">
-      <div class="container">
-        <section class="rule-one">
-          <h3 class="rule-one__title">Отступ задается от предыдущего элемента к следующему: от первого ко второму, сверху вниз, слева направо.</h3>
-          <div class="rule-one__block rule-one__block-img1">
+    <div class="container">
+      <section class="cats" id="cats-link">
+        <h3 class="cats__title">Отступ задается от предыдущего элемента к следующему: от первого ко второму, сверху вниз, слева направо.</h3>
+        <div class="cats__content">
+          <div class="cats__block cats__block-img1">
             <img src="image/image_1.jpg" alt="пример с использованием margin у 4 блоков">
           </div>
-          <div class="rule-one__block rule-one__block-text1">
+          <div class="cats__block cats__block-text1">
             <p class="text"><b>ВАЖНО</b>: <i>margin</i> всегда задают от предыдущего элемента к следующему.
             </p>
             <p class="text">Свойство <i>margin</i> необходимо только для того, чтобы отодвинуть своего соседа справа или снизу, поэтому используется <i>margin-right</i> и <i>margin-bottom</i>.
@@ -58,7 +58,9 @@
             <p class="text">Для <i>padding</i> верно обратное. Исключением является его применения в декоративных целях, например, для увеличения области ссылки.
             </p>
           </div>
-          <div class="rule-one__block rule-one__block-text2">
+        </div>
+        <div class="cats__content">
+          <div class="cats__block cats__block-text2">
             <p class="text">Отступ внутри блока сверху или слева реализуется через <i>padding-top</i> и <i>padding-left</i> родителя.
             </p>
             <p class="text">Отступы, как правило, делают в направлении от предыдущего элемента к следующему. Так элемент не будет толкать сам себя.
@@ -66,74 +68,78 @@
             <p class="text">Изначально элемент статичен, а его положение может меняться только под воздействием свойств других блоков или свойств родителя.
             </p>
           </div>
-          <div class="rule-one__block rule-one__block-img2">
+          <div class="cats__block cats__block-img2">
             <img src="image/image_2.jpg" alt="пример с использованием margin у 4 блоков">
           </div>
-        </section>
+        </div>
+      </section>
+    </div>
 
-        <section class="rule-two">
-          <h3 class="rule-two__title">Отступ задается последнему возможному элементу в DOM-дереве</h3>
-          <p class="text">Вообще, margin задают исключительно между соседними элементами DOM-дерева. Для примера, посмотрите на этот список:
-          </p>
-          <div class="rule-two__block-img1">
-            <img class="rule-two__img-dom1" src="image/image_3.jpg" alt="Пример кода DOM-дерева">
-            <img class="rule-two__img-dom2" src="image/image_4.jpg" alt="Пример отображения DOM-дерева ">
-          </div>
-          <p class="text">Отступ делают за счёт соседних элементов, а не дочерних:
-          </p>
-          <figure class="rule-two__figure">
-            <img class="rule-two__img-dom3" src="image/image_5.jpg" alt="Пример отступа, используя margin">
-            <figcaption class="figcaption"><b>ВАЖНО</b>: здесь .<i>list-item</i> — последний возможный элемент в котором мы задаём отступ, чтобы разделить списки.
-            </figcaption>
-          </figure>
-          <p class="text">Казалось бы, можно задать отступ параграфу &lt;<i>p</i>&gt;	, либо обёртке &lt;<i>article</i>&gt;	 для достижения той же цели. Внешне останется все точно также, но так делать не рекомендуется.
-          </p>
-          <p class="text">Предыдущий пример был достаточно простым, но бывает вложенность значительно больше.
-          </p>
-          <img class="rule-two__img-dom4" src="image/image_6.jpg" alt="Пример кода c двойной вложенностью">
-          <p class="text">В случае с заголовком, если ему необходим отступ сверху, последним элементом будет <i>section</i>. Именно для него задается <i>padding-top</i>, а не <i>div</i> с классом <i>container</i>. Свойства <i>margin</i>, которые стоят по умолчанию необходимо обнулить.
-          </p>
-          <img class="rule-two__img-dom5" src="image/image_7.jpg" alt="Пример использования padding-top c двойной вложенностью">
-          <p class="text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.
-          </p>
-        </section>
+    <div class="container">
+      <section class="dom" id="dom-link">
+        <h3 class="dom__title">Отступ задается последнему возможному элементу в DOM-дереве</h3>
+        <p class="text">Вообще, margin задают исключительно между соседними элементами DOM-дерева. Для примера, посмотрите на этот список:
+        </p>
+        <div class="dom__block-img1">
+          <img class="dom__img-dom1" src="image/image_3.jpg" alt="Пример кода DOM-дерева">
+          <img class="dom__img-dom2" src="image/image_4.jpg" alt="Пример отображения DOM-дерева ">
+        </div>
+        <p class="text">Отступ делают за счёт соседних элементов, а не дочерних:
+        </p>
+        <figure class="dom__figure">
+          <img class="dom__img-dom3" src="image/image_5.jpg" alt="Пример отступа, используя margin">
+          <figcaption class="figcaption"><b>ВАЖНО</b>: здесь .<i>list-item</i> — последний возможный элемент в котором мы задаём отступ, чтобы разделить списки.
+          </figcaption>
+        </figure>
+        <p class="text">Казалось бы, можно задать отступ параграфу &lt;<i>p</i>&gt;	, либо обёртке &lt;<i>article</i>&gt;	 для достижения той же цели. Внешне останется все точно также, но так делать не рекомендуется.
+        </p>
+        <p class="text">Предыдущий пример был достаточно простым, но бывает вложенность значительно больше.
+        </p>
+        <img class="dom__img-dom4" src="image/image_6.jpg" alt="Пример кода c двойной вложенностью">
+        <p class="text">В случае с заголовком, если ему необходим отступ сверху, последним элементом будет <i>section</i>. Именно для него задается <i>padding-top</i>, а не <i>div</i> с классом <i>container</i>. Свойства <i>margin</i>, которые стоят по умолчанию необходимо обнулить.
+        </p>
+        <img class="dom__img-dom5" src="image/image_7.jpg" alt="Пример использования padding-top c двойной вложенностью">
+        <p class="text">Это необходимо для более простого поиска отступов в будущем — для вас или того, кто будет верстать после вас. Кроме того, возможны серьёзные проблемы при динамическом дублировании или выводе вёрстки с нестандартной структурой отступов.
+        </p>
+      </section>
+    </div>
 
-        <section class="rule-three">
-          <h3>Для последнего элемента группы отступ всегда обнуляется</h3>
-          <p class="text">Для наглядности возьмём наш предыдущий пример с рецептами
-          </p>
-          <p class="text">Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.
-          </p>
-          <img class="rule-three__img" src="image/image_8.jpg" alt="Пример обнуления отступа для последнего элемента">
-          <p class="text">В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю padding для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.
-          </p>
-          <img class="rule-three__img" src="image/image_9.jpg" alt="Пример обнуления отступа для последнего элемента в браузере">
-          <img class="rule-three__img-nomargin" src="image/image_10.jpg" alt="Пример кода html, где article вложен в тег section">
-          <img class="rule-three__img" src="image/image_11.jpg" alt="Еще один пример кода html, где article вложен в тег section">
-          <figure>
-            <figcaption class="text">Для большего понимания рассмотрим другой пример, который часто встречается на практике:
-            </figcaption>
-            <img class="rule-three__img" src="image/image_12.jpg" alt="Пример отображения навигации сайта Methed в браузере">
-            <img class="rule-three__img" src="image/image_13.jpg" alt="Пример отображения навигации сайта Methed в CSS">
-          </figure>
-          <figure>
-            <figcaption class="text">Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:
-            </figcaption>
-            <img class="rule-three__img" src="image/image_14.jpg" alt="Пример использования margin для элементов списка">
-          </figure>
-          <figure>
-            <figcaption class="text">Советую использовать псевдоклассы :last-child чаще других, например так:
-            </figcaption>
-            <img class="rule-three__img-last" src="image/image_15.jpg" alt="Пример использования margin для элементов списка">
-          </figure>
-        </section>
-      </div>
-    </section>
+    <div class="container">
+      <section class="receipt" id="receipt-link">
+        <h3 class="receipt__title">Для последнего элемента группы отступ всегда обнуляется</h3>
+        <p class="text">Для наглядности возьмём наш предыдущий пример с рецептами
+        </p>
+        <p class="text">Между рецептами расстояние одинаковое. Можно заметить, что и до следующего блока расстояние такое же.
+        </p>
+        <img class="receipt__img" src="image/image_8.jpg" alt="Пример обнуления отступа для последнего элемента">
+        <p class="text">В соответствии со вторым принципом: последний <i>margin</i> обнуляется, а нижний отступ задаётся через <i>padding</i> для <i>section</i>. Я чаще всего задаю padding для секции с обоих сторон, если расстояние между секциями 100px задаю секциям <i>padding-top:50px</i> и <i>padding-bottom:50px</i>.
+        </p>
+        <img class="receipt__img" src="image/image_9.jpg" alt="Пример обнуления отступа для последнего элемента в браузере">
+        <img class="receipt__img-nomargin" src="image/image_10.jpg" alt="Пример кода html, где article вложен в тег section">
+        <img class="receipt__img" src="image/image_11.jpg" alt="Еще один пример кода html, где article вложен в тег section">
+        <figure>
+          <figcaption class="text">Для большего понимания рассмотрим другой пример, который часто встречается на практике:
+          </figcaption>
+          <img class="receipt__img" src="image/image_12.jpg" alt="Пример отображения навигации сайта Methed в браузере">
+          <img class="receipt__img" src="image/image_13.jpg" alt="Пример отображения навигации сайта Methed в CSS">
+        </figure>
+        <figure>
+          <figcaption class="text">Здесь нас интересует отступ между пунктами меню и списком с кнопкой поиска. Отступы между пунктами меню задаются так:
+          </figcaption>
+          <img class="receipt__img" src="image/image_14.jpg" alt="Пример использования margin для элементов списка">
+        </figure>
+        <figure>
+          <figcaption class="text">Советую использовать псевдоклассы :last-child чаще других, например так:
+          </figcaption>
+          <img class="receipt__img-last" src="image/image_15.jpg" alt="Пример использования margin для элементов списка">
+        </figure>
+      </section>
+    </div>
 
     <section class="resume">
-      <div class="container-nav">
-        <h2 class="resume__title">Подытожим:</h2>
+      <div class="container--resume">
         <div class="resume__content">
+          <h2 class="resume__title">Подытожим:</h2>
           <ul class="resume__list">
             <li class="resume__item">отступы задаём от предыдущего элемента к следующему
             </li>
@@ -146,6 +152,8 @@
             <li class="resume__item">последнему элементу группы отступ всегда обнуляем
             </li>
           </ul>
+          <p>Конечно бывают исключения. Ведь макеты бывают различной сложности. Иногда базовые принципы приходится нарушать в угоду дизайнерского решения или простоты вёрстки. Но для этого эти принципы необходимо хорошо знать.
+          </p>
         </div>
       </div>
     </section>
