--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <section class="content">
-      <div class="container--nav">
+      <div class="content__container">
         <nav class="content__navigation">
         <h2 class="content__title">Содержание</h2>
         <ol class="content__navigation__list">
@@ -137,7 +137,7 @@
     </div>
 
     <section class="resume">
-      <div class="container--resume">
+      <div class="resume__container">
         <div class="resume__content">
           <h2 class="resume__title">Подытожим:</h2>
           <ul class="resume__list">
